# properties-file

./: properties-file.cabal  properties.dtd
src/Data/: Properties.hs
src/Data/Properties/: PlainText.hs  Type.hs
