name:                   properties-file
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Data, Configuration
synopsis:               Java \".properties\" files
description:            Rough implementation of the \"properties\" data
                        structure and plain text format as popularized by
                        Java's java.util.Properties class.

source-repository head
  type: git
  location: git://github.com/mokus0/properties-file.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Properties
  other-modules:        Data.Properties.Type
                        Data.Properties.PlainText
  build-depends:        base >= 3 && <5, containers, pretty
